--- a/css/general.css
+++ b/css/general.css
@@ -16,7 +16,7 @@ h1 {
     text-transform: uppercase;
 }
 h2 {
-    font-size: calc(12px + 0.7vw);
+    font-size: 18px;
     font-weight: 300;
     color: #B5B5B5;
     line-height: 1.8;
