--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,4 @@
-#about {
-    background: radial-gradient(circle at 96% 11%, #2C2C2C 0%, #1A1A1A 60%);
+.about {
     padding: 0 10%;
     display: flex;
     justify-content: center;
@@ -41,7 +40,7 @@
     .block h3 {
         font-size: 18px;
     }
-    #about .bottom .orange#button::before {
+    .about .bottom .orange#button::before {
         flex-flow: column nowrap;
         content: "R$ 5.000,00";
         color: white;
@@ -50,20 +49,20 @@
         width: 80px;
         color: #B5B5B5;
     }
-    #about .flex-container {
+    .about .flex-container {
         height: 900px;
     }
-    #about {
+    .about {
         height: 1000px;
     }
 }
 
 
 @media only screen and (min-width: 1050px) {
-    #about .flex-container {
+    .about .flex-container {
         height: 700px;
     }
-    #about {
+    .about {
         height: 100vh;
     }  
 }
