--- a/css/form.css
+++ b/css/form.css
@@ -13,7 +13,7 @@
 form {
     font-family: Lato;
     height: fit-content;
-    width: 600px;
+    width: 100%;
     background-color: #232323;
     display: flex;
     flex-flow: column nowrap;
@@ -30,7 +30,7 @@ input {
     border: 1px solid #F89D24;
     margin: 8px;
     border-radius: 5px;
-    width: 328px;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -47,7 +47,6 @@ input#termos {
     outline: 2px solid #006dfc;
     filter: invert(80%);
     width: auto;
-    margin-bottom: 50px;
 }
 
 input[type=submit] {
@@ -67,6 +66,7 @@ input[type=submit] {
 }
 
 .msg {
+    margin-top: 40px;
     color: white;
 }
 
@@ -100,4 +100,14 @@ form a:nth-child(1) {
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
+}
+
+
+@media only screen and (min-width: 893px) {
+    form {
+        width: 600px;
+    }
+    input {
+        width: 328px;
+    }
 }
